<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/head1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/NoBall_string"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/Radio_Group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:outlineProvider="none">

        <RadioButton
            android:id="@+id/rb0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/One_run"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/Radio_Group"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/Two_run"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/Three_run"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/Four_run"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/Five_run"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/Six_run"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rb6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/button_gradient"
            android:paddingStart="15dp"
            android:paddingTop="5dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:text="@string/No_RUNS"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp" />
    </RadioGroup>

</RelativeLayout>