<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScorePage">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/b1" />

    <LinearLayout
        android:id="@+id/TopBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteX="5dp">

        <Button
            android:id="@+id/mew"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFDFD"
            android:text="@string/New"
            android:textSize="18sp" />

        <Button
            android:id="@+id/record"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFDFD"
            android:text="@string/Record"
            android:textSize="18sp" />

        <Button
            android:id="@+id/undo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFDFD"
            android:text="@string/Undo"
            android:textSize="18sp" />

        <Button
            android:id="@+id/redo"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="#FFFDFD"
            android:text="@string/Redo"
            android:textSize="18sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="40dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Myscores"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textColor="@color/Gold"
                    android:textDirection="firstStrongRtl"
                    android:textSize="48sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/objects"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textColor="@color/Red_op_235"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/one"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_green"
                    android:text="@string/One_run"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/two"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_green"
                    android:text="@string/Two_run"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/three"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_green"
                    android:text="@string/Three_run"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/four"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_gold"
                    android:text="@string/Four_run"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/five"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_gold"
                    android:text="@string/Five_run"
                    android:textColor="#000"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/six"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_gold"
                    android:text="@string/Six_run"
                    android:textColor="#000"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/NoRuns"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_red"
                    android:onClick="NORUNS"
                    android:text="@string/No_RUNS"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/wide"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_red"
                    android:onClick="wideBall"
                    android:text="@string/Wide"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/no"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_red"
                    android:onClick="noBall"
                    android:text="@string/NoBall"
                    android:textColor="#fff"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginBottom="0dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/byes"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_red"
                    android:onClick="allByes"
                    android:text="@string/AllByes"
                    android:textColor="#fff"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/wicket"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_round_red"
                    android:onClick="wicketdown"
                    android:text="@string/Wicket"
                    android:textColor="#fff"
                    android:textSize="24sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>