<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTintMode="src_atop"
        android:foreground="@color/White_op_83"
        android:foregroundTintMode="src_over"
        android:scaleType="centerCrop"
        android:src="@drawable/kauai_1"
        android:visibility="visible"
        tools:src="@drawable/kauai_1" />

    <RadioGroup
        android:id="@+id/MyGrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/Half1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/H1"
            android:textColor="#000"
            android:textSize="18sp"
            android:checked="true"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/Half2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:padding="3dp"
            android:text="@string/H2"
            android:textColor="#000"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/Part2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/MyGrp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/Overs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/NoOvers"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/OversCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/Players"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/NoPlayers"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/PlayersCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/Myextra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Extra"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/ExtraCount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/LetsGo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Part2"
        android:layout_centerInParent="true"
        android:layout_marginTop="36dp"
        android:text="@string/Go"
        android:background="@drawable/button_round_gold"
        android:textSize="36sp" />

</RelativeLayout>